--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@mdx-js/react": "^2.3.0",
     "@monaco-editor/react": "^4.6.0",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-syntax-highlighter": "^15.5.6",
@@ -40,6 +39,7 @@
     "katex": "^0.16.7",
     "negotiator": "^0.6.3",
     "next": "^14.0.4",
+    "nextjs-cors": "^2.2.0",
     "rc-textarea": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -67,6 +67,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/js-cookie": "^3.0.3",
     "@types/negotiator": "^0.6.1",
+    "@types/node": "^22.7.9",
     "autoprefixer": "^10.4.14",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^13.2.2",
