--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# APP ID
-NEXT_PUBLIC_APP_ID=
-# APP API key
-NEXT_PUBLIC_APP_KEY=
-# API url prefix
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_APP_ID='8c55630c-bdb2-4f10-aef0-75c7eef82bd6' 
+NEXT_PUBLIC_APP_KEY='app-T3sg0lIQQyYjq9l0n7ZAS678' 
+NEXT_PUBLIC_API_URL='https://dify.humana.team/v1'
